--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,16 +1,18 @@
 body {
+    
     min-height: 100vh;
+    width: 100%;
     background-color: $very-dark-blue;
     color: $white;
-    margin: 0 20px;
+    padding: 0 20px;
     display: flex;
     justify-content: center;
-  
 }
 
 .card {
     display: flex;
     align-items: center;
+    justify-content:center;
     position: relative;
     width: 100%;
     max-width: 500px;
@@ -19,14 +21,13 @@ body {
   
 }
   
-.rating-card {
+  .rating-card {
     @include childs-card-setup(0deg);
     
-    transform-origin: right center;
+    
 }
 .thank-you-card {
     @include childs-card-setup(180deg);
-    transform-origin: right center;
      
 }
 .card.flip .rating-card {
