--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   min-height: 100vh;
   width: 100%;
@@ -15,38 +14,16 @@ body {
   justify-content: center;
   position: relative;
   width: 100%;
-  max-width: 500px;
-  perspective: 1000px; /* Añadido para el efecto 3D */
-  /* Añade una transición suave */
-}
-
-.rating-card {
-  position: absolute;
-  transform: rotateY(0deg);
-  background-color: hsl(213, 20%, 18%);
-  padding: 25px 30px;
-  border-radius: 20px;
-  transform-style: preserve-3d;
-  backface-visibility: hidden;
-}
-
-.thank-you-card {
-  position: absolute;
-  transform: rotateY(180deg);
-  background-color: hsl(213, 20%, 18%);
-  padding: 25px 30px;
-  border-radius: 20px;
-  transform-style: preserve-3d;
-  backface-visibility: hidden;
+  max-width: 420px;
+  perspective: 1000px;
 }
 
 .card.flip .rating-card {
   transition: transform 0.5s;
   transform: rotateY(180deg);
 }
-
 .card.flip .thank-you-card {
-  transition: transform 0.5s;
+  transition: transform 1s;
   transform: rotateY(0deg);
 }
 
@@ -115,6 +92,16 @@ body {
   background-color: hsl(216, 12%, 54%);
 }
 
+.rating-card {
+  position: absolute;
+  transform: rotateY(0deg);
+  background-color: hsl(213, 20%, 18%);
+  padding: 25px 30px;
+  border-radius: 20px;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+}
+
 .rating-card-h1 {
   display: flex;
   flex-direction: column;
@@ -145,6 +132,13 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: absolute;
+  transform: rotateY(180deg);
+  background-color: hsl(213, 20%, 18%);
+  padding: 25px 30px;
+  border-radius: 20px;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
   text-align: center;
 }
 .thank-you-card::before {
