--- a/assets/scss/components/_rating-card.scss
+++ b/assets/scss/components/_rating-card.scss
@@ -8,7 +8,7 @@
     &::before{
         @include flex-column-center($align-items: center,$justify-content:center);
         @include size-setup(52px,46px);
-        content: url('/assets/images/icon-star.svg');
+        content: url('../images/icon-star.svg');
         background-color: $medium-grey-star-background;
         border-radius: 50%;
         padding-top: 3px;
