--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -53,7 +53,7 @@
 @mixin childs-card-setup($transformY){
   position: absolute;
   transform: rotateY($transformY);
-  background-color: $dark-blue;
+  background-image: linear-gradient(to top, hsl(213, 20%, 18%,0.4) 15%,hsl(213, 20%, 18%) );
   padding: 25px 30px;
   border-radius: 20px;
   transform-style: preserve-3d;
