--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,11 +52,16 @@ body {
   border-radius: 30px;
   border: none;
   margin: 20px 0px;
-  cursor: pointer;
 }
-.submit-button:hover {
-  background-color: hsl(0, 0%, 100%);
+.submit-button:disabled {
+  cursor: not-allowed;
+  opacity: 0.8;
+}
+.submit-button.checked:hover {
+  background: hsl(0, 0%, 100%);
   color: hsl(25, 97%, 53%);
+  cursor: pointer;
+  opacity: 1;
 }
 
 .rating-form-group {
@@ -85,11 +90,13 @@ body {
   cursor: pointer;
 }
 .opt:hover {
-  background-color: hsl(25, 97%, 53%);
+  background: hsl(25, 97%, 53%);
+  color: hsl(0, 0%, 100%);
 }
 
 .form-inputs:checked + .opt {
-  background-color: hsl(216, 12%, 54%);
+  background: hsl(216, 12%, 54%);
+  color: hsl(0, 0%, 100%);
 }
 
 .rating-card {
