--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -7,6 +7,7 @@
     border-radius: 30px;
     border: none;
     margin: 20px 0px;
+    padding-top: 3px;
     &:disabled{
         cursor: not-allowed;
         opacity: 0.8;
